--- a/style.css
+++ b/style.css
@@ -1,45 +1,82 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
 
+/*
+* {
+    border: red solid;
+}
+*/
+
 body {
     font-family: "Roboto", sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
 }
+
+p {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 5px 25px;
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    border-style: none;
+}
+
+.sign-up-wrapper button {
+    border: #F9FAF8 2px solid;
+}
+
 
 .header,.main-banner,.footer {
     background-color: #1F2937;
     color: #E5E7EB;
     display: flex;
+    padding: 15px 120px;
+}
+
+.lower-banner {
+    padding: 15px 125px;
 }
 
 .header {
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    
 }
 
 .logo {
     font-size: 24px;
     font-weight: bolder;
     color: #F9FAF8;
-    margin: 0 50px;
+    
 }
 
 .main-banner {
-    justify-content: center;
-    padding: 20px;
+    justify-content: space-between;
+    flex: 1;
 }
 
 .hero-text-wrapper {
-    width: 400px;
+    width: 475px;
 }
 
 #hero-text {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+}
+
+#hero-sub-text {
+    margin: 5px;
 }
 
 .footer {
@@ -50,5 +87,5 @@ a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
-    margin: 15px;
+    margin: 0 8px;
 }
